--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html dir="ltr">
 <head>
-  <title>XOWA: Main Page</title>
+  <title>Main Page - XOWA</title>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <link rel="shortcut icon" href="xowa-logo.png" />
-  <link rel="stylesheet" href="xowa.css" type="text/css">
-</head>
+  <link rel="shortcut icon" href="/xowa/wiki/home/xowa_logo.png" />
+  <link rel="stylesheet" href="/xowa/wiki/home/xowa_common.css" type="text/css">
+ </head>
 <body class="mediawiki ltr sitedir-ltr ns-0 ns-subject skin-vector action-submit vector-animateLayout" spellcheck="false">
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
   <h1 id="firstHeading" class="firstHeading"><span>Main Page</span></h1>
-  <div id="bodyContent">
-    <div id="siteSub">From XOWA: a free, open-source, offline wiki application</div>
+  <div id="bodyContent" class="mw-body-content">
+    <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
 
@@ -21,7 +21,7 @@
 <tr>
 <td width='80%' valign='top'>
   <h2><span class='mw-headline' id='Summary'> Summary </span></h2>
-  <p>XOWA is a free, open-source application that lets you download Wikipedia to your computer. Access all of Wikipedia offline -- without an internet connection!
+  <p>XOWA is the free, open-source application that lets you download Wikipedia to your computer. Access all of Wikipedia offline -- without an internet connection!
   </p>
 
   <div class="thumb tright">
@@ -242,19 +242,29 @@
 
 <div id='mw-panel' class='noprint'>
   <div id='p-logo'>
-    <a style="background-image: url(xowa-logo.png);" href="https://gnosygnu.github.io/xowa/" title="Visit the main page"></a>
+    <a style="background-image: url(/xowa/wiki/home/xowa_logo.png);" href="https://gnosygnu.github.io/xowa/" title="Visit the main page"></a>
   </div>
   <div class="portal" id='xowa-portal-home'>
     <h3>XOWA</h3>
     <div class="body">
       <ul>
         <li><a href="https://gnosygnu.github.io/xowa/" title='Visit the main page'>Main page</a></li>
-        <li><a href="blog.html" title='Follow XOWA''s development process'>Blog</a></li>
-        <li><a href="screenshots.html" title='See screenshots of XOWA'>Screenshots</a></li>
-        <li><a href="download.html" title='Download the XOWA application'>Download XOWA</a></li>
-        <li><a href="image_dbs.html" title='Download offline wikis and image databases'>Download wikis</a></li>
-        <li><a href="reviews.html" title='Read what others have written about XOWA'>Media</a></li>
-        <li><a href="about.html" title='Get more information about XOWA'>About</a></li>
+        <li><a href="https://gnosygnu.github.io/xowa/screenshots.html" title='See screenshots of XOWA'>Screenshots</a></li>
+        <li><a href="/xowa/wiki/home/page/Help/Download_XOWA.html" title='Download the XOWA application'>Download XOWA</a></li>
+        <li><a href="/xowa/wiki/home/page/Dashboard/Image_databases.html" title='Download offline wikis and image databases'>Download wikis</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="portal" id='xowa-portal-stargin'>
+    <h3>Getting started</h3>
+    <div class="body">
+      <ul>
+        <li><a href="/xowa/wiki/home/page/App/Setup/System_requirements.html" title='Get XOWA&apos;s system requirements'>Requirements</a></li>
+        <li><a href="/xowa/wiki/home/page/App/Setup/Installation.html" title='Get instructions for installing XOWA'>Installation</a></li>
+        <li><a href="/xowa/wiki/home/page/App/Import/Simple_Wikipedia.html" title='Learn how to set up Simple Wikipedia'>Simple Wikipedia</a></li>
+        <li><a href="/xowa/wiki/home/page/App/Import/English_Wikipedia.html" title='Learn how to set up English Wikipedia'>English Wikipedia</a></li>
+        <li><a href="/xowa/wiki/home/page/App/Import/Other_wikis.html" title='Learn how to set up other Wikipedias'>Other Wikipedias</a></li>
       </ul>
     </div>
   </div>
@@ -263,16 +273,23 @@
     <h3>Help</h3>
     <div class="body">
       <ul>
-        <li><a href="requirements.html" title='Get XOWA&apos;s system requirements'>Requirements</a></li>
-        <li><a href="installation.html" title='Get instructions for installing XOWA'>Installation</a></li>
-        <li><a href="setup_simplewiki.html" title='Learn how to set up Simple Wikipedia'>Set up Simple Wikipedia</a></li>
-        <li><a href="setup_enwiki.html" title='Learn how to set up English Wikipedia'>Set up English Wikipedia</a></li>
-        <li><a href="setup_other_wikis.html" title='Learn how to set up Other Wikipedias'>Set up Other Wikipedias</a></li>
-        <li><a href="contact.html" title='Questions? Comments? Leave feedback for XOWA'>Feedback</a></li>
+        <li><a href="/xowa/wiki/home/page/Help/About.html" title='Get more information about XOWA'>About</a></li>
+        <li><a href="/xowa/wiki/home/page/Help/Contents.html" title='View a list of help topics'>Contents</a></li>
+        <li><a href="/xowa/wiki/home/page/Help/Media.html" title='Read what others have written about XOWA'>Media</a></li>
+        <li><a href="/xowa/wiki/home/page/Help/Feedback.html" title='Questions? Comments? Leave feedback for XOWA'>Feedback</a></li>
       </ul>
     </div>
   </div>
   
+  <div class="portal" id='xowa-portal-blog'>
+    <h3>Blog</h3>
+    <div class="body">
+      <ul>
+        <li><a href="/xowa/wiki/home/page/Blog.html" title='Follow XOWA''s development process'>Current</a></li>
+      </ul>
+    </div>
+  </div>
+
   <div class="portal" id='xowa-portal-links'>
     <h3>Links</h3>
     <div class="body">
@@ -293,7 +310,7 @@
         <!-- <li><a href="" title="Support XOWA! (but only after you've supported archive.org and Wikipedia)">XOWA</a></li> -->
       </ul>
     </div>
+  </div></div>
   </div>
-</div>
 </body>
 </html>
