--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>Main Page - XOWA</title>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <link rel="shortcut icon" href="/xowa/wiki/home/xowa_logo.png" />
-  <link rel="stylesheet" href="/xowa/wiki/home/xowa_common.css" type="text/css">
+  <link rel="shortcut icon" href="http://xowa.org/xowa_logo.png" />
+  <link rel="stylesheet" href="http://xowa.org/xowa_common.css" type="text/css">
  </head>
 <body class="mediawiki ltr sitedir-ltr ns-0 ns-subject skin-vector action-submit vector-animateLayout" spellcheck="false">
 <div id="mw-page-base" class="noprint"></div>
@@ -26,8 +26,8 @@
 
   <div class="thumb tright">
     <div class="thumbinner" style="width:600px;">
-      <a href="wiki/file_screenshot_wikipedia_xowa.png" class="image">
-        <img src="wiki/file_screenshot_wikipedia_xowa_600px.png" />
+      <a href="http://xowa.org/wiki/home/file/screenshot_wikipedia_xowa.png" class="image">
+        <img src="http://xowa.org/wiki/home/file/screenshot_wikipedia_xowa_600px.png" />
       </a>
       <div class="thumbcaption">
         XOWA showing <a href="http://en.wikipedia.org/wiki/Wikipedia">Wikipedia's article on Wikipedia</a>
