--- a/screenshots.html
+++ b/screenshots.html
@@ -3,8 +3,8 @@
 <head>
   <title>Screenshots - XOWA</title>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <link rel="shortcut icon" href="xowa-logo.png" />
-  <link rel="stylesheet" href="xowa.css" type="text/css">
+  <link rel="shortcut icon" href="http://xowa.org/xowa-logo.png" />
+  <link rel="stylesheet" href="http://xowa.org/xowa.css" type="text/css">
 </head>
 <body class="mediawiki ltr sitedir-ltr ns-0 ns-subject skin-vector action-submit vector-animateLayout" spellcheck="false">
 <div id="mw-page-base" class="noprint"></div>
