--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>Main Page - XOWA</title>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <link rel="shortcut icon" href="http://xowa.org/xowa_logo.png" />
-  <link rel="stylesheet" href="http://xowa.org/xowa_common.css" type="text/css">
+  <link rel="shortcut icon" href="xowa_logo.png" />
+  <link rel="stylesheet" href="xowa_common.css" type="text/css">
  </head>
 <body class="mediawiki ltr sitedir-ltr ns-0 ns-subject skin-vector action-submit vector-animateLayout" spellcheck="false">
 <div id="mw-page-base" class="noprint"></div>
@@ -242,7 +242,7 @@
 
 <div id='mw-panel' class='noprint'>
   <div id='p-logo'>
-    <a style="background-image: url(http://xowa.org/xowa_logo.png);" href="https://xowa.org/" title="Visit the main page"></a>
+    <a style="background-image: url(xowa_logo.png);" href="/" title="Visit the main page"></a>
   </div>
   <div class="portal" id='xowa-portal-home'>
     <h3>XOWA</h3>
