--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
   <div class="thumb tright">
     <div class="thumbinner" style="width:600px;">
-      <a href="http://xowa.org/wiki/home/file/screenshot_wikipedia_xowa.png" class="image">
-        <img src="http://xowa.org/wiki/home/file/screenshot_wikipedia_xowa_600px.png" />
+      <a href="/wiki/home/file/screenshot_wikipedia_xowa.png" class="image">
+        <img src="/wiki/home/file/screenshot_wikipedia_xowa_600px.png" />
       </a>
       <div class="thumbcaption">
         XOWA showing <a href="http://en.wikipedia.org/wiki/Wikipedia">Wikipedia's article on Wikipedia</a>
