--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>Main Page - XOWA</title>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <link rel="shortcut icon" href="xowa_logo.png" />
-  <link rel="stylesheet" href="xowa_common.css" type="text/css">
+  <link rel="shortcut icon" href="//xowa.org/xowa_logo.png" />
+  <link rel="stylesheet" href="//xowa.org/xowa_common.css" type="text/css">
  </head>
 <body class="mediawiki ltr sitedir-ltr ns-0 ns-subject skin-vector action-submit vector-animateLayout" spellcheck="false">
 <div id="mw-page-base" class="noprint"></div>
