--- a/download.html
+++ b/download.html
@@ -11,7 +11,7 @@
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
   <h1 id="firstHeading" class="firstHeading"><span>Download</span></h1>
-  <div id="bodyContent">
+  <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: a free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
