--- a/setup_other_wikis.html
+++ b/setup_other_wikis.html
@@ -3,8 +3,8 @@
 <head>
   <title>XOWA: Set up Other Wikipedias</title>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <link rel="shortcut icon" href="//gnosygnu.github.io/xowa/xowa_logo.png" />
-  <link rel="stylesheet" href="//gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
+  <link rel="shortcut icon" href="//xowa.org/xowa_logo.png" />
+  <link rel="stylesheet" href="//xowa.org/xowa_common.css" type="text/css">
 </head>
 <body class="mediawiki ltr sitedir-ltr ns-0 ns-subject skin-vector action-submit vector-animateLayout" spellcheck="false">
 <div id="mw-page-base" class="noprint"></div>
@@ -21,7 +21,7 @@
       <span class='mw-headline' id='Overview'>Overview</span>
     </h2>
     <p>
-      Other Wikipedias will follow the same process as setting up Simple Wikipedia or English Wikipedia. The steps are summarized below, but you should read both <a href="https://gnosygnu.github.io/xowa//setup_simpewiki.html" class="external text" rel="nofollow">Help:Set up Simple Wikipedia</a> and <a href="https://gnosygnu.github.io/xowa//setup_enwiki.html" class="external text" rel="nofollow">Help:Set up English Wikipedia</a>
+      Other Wikipedias will follow the same process as setting up Simple Wikipedia or English Wikipedia. The steps are summarized below, but you should read both <a href="https://xowa.org//setup_simpewiki.html" class="external text" rel="nofollow">Help:Set up Simple Wikipedia</a> and <a href="https://xowa.org//setup_enwiki.html" class="external text" rel="nofollow">Help:Set up English Wikipedia</a>
     </p>
     <p>
       Note that some Wikipedias will require a lot of disk space. For example, German Wikipeda requires at least 40 GB. Depending on your location it may take several hours to download that much data. Please prepare accordingly.
@@ -66,7 +66,7 @@
       When you're ready to start, do the following:
     </p>
     <ul>
-      <li>Go to <a href="https://gnosygnu.github.io/xowa//image_dbs.html" class="external text" rel="nofollow">the download page</a>
+      <li>Go to <a href="https://xowa.org//image_dbs.html" class="external text" rel="nofollow">the download page</a>
       </li>
       <li>Find your wiki in the list and click on the link
       </li>
@@ -114,16 +114,16 @@
 
 <div id='mw-panel' class='noprint'>
   <div id='p-logo'>
-    <a style="background-image: url(//gnosygnu.github.io/xowa/xowa_logo.png);" href="//gnosygnu.github.io/xowa/" title="Visit the main page"></a>
+    <a style="background-image: url(//xowa.org/xowa_logo.png);" href="//xowa.org/" title="Visit the main page"></a>
   </div>
   <div class="portal" id='xowa-portal-home'>
     <h3>XOWA</h3>
     <div class="body">
       <ul>
-        <li><a href="//gnosygnu.github.io/xowa/" title='Visit the main page'>Main page</a></li>
-        <li><a href="//gnosygnu.github.io/xowa/screenshots.html" title='See screenshots of XOWA'>Screenshots</a></li>
-        <li><a href="//gnosygnu.github.io/xowa/wiki/home/page/Help/Download_XOWA.html" title='Download the XOWA application'>Download XOWA</a></li>
-        <li><a href="//gnosygnu.github.io/xowa/wiki/home/page/Dashboard/Image_databases.html" title='Download offline wikis and image databases'>Download wikis</a></li>
+        <li><a href="//xowa.org/" title='Visit the main page'>Main page</a></li>
+        <li><a href="//xowa.org/screenshots.html" title='See screenshots of XOWA'>Screenshots</a></li>
+        <li><a href="//xowa.org/wiki/home/page/Help/Download_XOWA.html" title='Download the XOWA application'>Download XOWA</a></li>
+        <li><a href="//xowa.org/wiki/home/page/Dashboard/Image_databases.html" title='Download offline wikis and image databases'>Download wikis</a></li>
       </ul>
     </div>
   </div>
@@ -132,11 +132,11 @@
     <h3>Getting started</h3>
     <div class="body">
       <ul>
-        <li><a href="//gnosygnu.github.io/xowa/wiki/home/page/App/Setup/System_requirements.html" title='Get XOWA&apos;s system requirements'>Requirements</a></li>
-        <li><a href="//gnosygnu.github.io/xowa/wiki/home/page/App/Setup/Installation.html" title='Get instructions for installing XOWA'>Installation</a></li>
-        <li><a href="//gnosygnu.github.io/xowa/wiki/home/page/App/Import/Simple_Wikipedia.html" title='Learn how to set up Simple Wikipedia'>Simple Wikipedia</a></li>
-        <li><a href="//gnosygnu.github.io/xowa/wiki/home/page/App/Import/English_Wikipedia.html" title='Learn how to set up English Wikipedia'>English Wikipedia</a></li>
-        <li><a href="//gnosygnu.github.io/xowa/wiki/home/page/App/Import/Other_wikis.html" title='Learn how to set up other Wikipedias'>Other Wikipedias</a></li>
+        <li><a href="//xowa.org/wiki/home/page/App/Setup/System_requirements.html" title='Get XOWA&apos;s system requirements'>Requirements</a></li>
+        <li><a href="//xowa.org/wiki/home/page/App/Setup/Installation.html" title='Get instructions for installing XOWA'>Installation</a></li>
+        <li><a href="//xowa.org/wiki/home/page/App/Import/Simple_Wikipedia.html" title='Learn how to set up Simple Wikipedia'>Simple Wikipedia</a></li>
+        <li><a href="//xowa.org/wiki/home/page/App/Import/English_Wikipedia.html" title='Learn how to set up English Wikipedia'>English Wikipedia</a></li>
+        <li><a href="//xowa.org/wiki/home/page/App/Import/Other_wikis.html" title='Learn how to set up other Wikipedias'>Other Wikipedias</a></li>
       </ul>
     </div>
   </div>
@@ -145,10 +145,10 @@
     <h3>Help</h3>
     <div class="body">
       <ul>
-        <li><a href="//gnosygnu.github.io/xowa/wiki/home/page/Help/About.html" title='Get more information about XOWA'>About</a></li>
-        <li><a href="//gnosygnu.github.io/xowa/wiki/home/page/Help/Contents.html" title='View a list of help topics'>Contents</a></li>
-        <li><a href="//gnosygnu.github.io/xowa/wiki/home/page/Help/Media.html" title='Read what others have written about XOWA'>Media</a></li>
-        <li><a href="//gnosygnu.github.io/xowa/wiki/home/page/Help/Feedback.html" title='Questions? Comments? Leave feedback for XOWA'>Feedback</a></li>
+        <li><a href="//xowa.org/wiki/home/page/Help/About.html" title='Get more information about XOWA'>About</a></li>
+        <li><a href="//xowa.org/wiki/home/page/Help/Contents.html" title='View a list of help topics'>Contents</a></li>
+        <li><a href="//xowa.org/wiki/home/page/Help/Media.html" title='Read what others have written about XOWA'>Media</a></li>
+        <li><a href="//xowa.org/wiki/home/page/Help/Feedback.html" title='Questions? Comments? Leave feedback for XOWA'>Feedback</a></li>
       </ul>
     </div>
   </div>
@@ -157,7 +157,7 @@
     <h3>Blog</h3>
     <div class="body">
       <ul>
-        <li><a href="//gnosygnu.github.io/xowa/wiki/home/page/Blog.html" title='Follow XOWA''s development process'>Current</a></li>
+        <li><a href="//xowa.org/wiki/home/page/Blog.html" title='Follow XOWA''s development process'>Current</a></li>
       </ul>
     </div>
   </div>
