--- a/about.html
+++ b/about.html
@@ -381,8 +381,8 @@ d17f529216e011db77e22365de09335a459d78584fb1c29066e79fe422b904f2</tt></td>
 
 <div id='mw-panel' class='noprint'>
   <div id='p-logo'>
-    <a style="background-image: url(//xowa.org/xowa_logo.png);" href="//gnosygnu.github.io/xowa/" title="Visit the main page"></a>
   </div>
+    <a style="background-image: url(//gnosygnu.github.io/xowa/xowa_logo.png);" href="//gnosygnu.github.io/xowa/" title="Visit the main page"></a>
   <div class="portal" id='xowa-portal-home'>
     <h3>XOWA</h3>
     <div class="body">
