--- a/installation.html
+++ b/installation.html
@@ -112,7 +112,7 @@
 
 <div id='mw-panel' class='noprint'>
   <div id='p-logo'>
-    <a style="background-image: url(//xowa.org/xowa_logo.png);" href="//gnosygnu.github.io/xowa/" title="Visit the main page"></a>
+    <a style="background-image: url(//gnosygnu.github.io/xowa/xowa_logo.png);" href="//gnosygnu.github.io/xowa/" title="Visit the main page"></a>
   </div>
   <div class="portal" id='xowa-portal-home'>
     <h3>XOWA</h3>
