--- a/about.html
+++ b/about.html
@@ -412,7 +412,7 @@ d17f529216e011db77e22365de09335a459d78584fb1c29066e79fe422b904f2</tt></td>
     <h3>Android</h3>
     <div class="body">
       <ul>
-        <li><a href="http://xowa.org/wiki/home/page/Android/Setup.html" title='Setup XOWA on your Android device'>Setup on Android</a></li>
+        <li><a href="http://xowa.org/wiki/home/page/Android/Setup.html" title='Setup XOWA on your Android device'>Setup</a></li>
       </ul>
     </div>
   </div>
