--- a/screenshots.html
+++ b/screenshots.html
@@ -84,12 +84,12 @@
 <tr>
 <td>
   <div class="thumbinner" style="width:600px;">
-    <a href="http://xowa.org/wiki/home/file/screenshot_wikipedia_xowa.png" class="image"><img alt="" src="http://xowa.org/wiki/home/file/screenshot_wikipedia_xowa_600px.png" /></a>
+    <a href="http://xowa.org/home/file/screenshot_wikipedia_xowa.png" class="image"><img alt="" src="https://gnosygnu.github.org/xowa/home/file/screenshot_wikipedia_xowa_600px.png" /></a>
   </div>
 </td>
 <td>
   <div class="thumbinner" style="width:600px;">
-    <a href="http://xowa.org/wiki/home/file/screenshot_wikipedia_wmf.png" class="image"><img alt="" src="http://xowa.org/wiki/home/file/screenshot_wikipedia_wmf_600px.png" /></a>
+    <a href="http://xowa.org/home/file/screenshot_wikipedia_wmf.png" class="image"><img alt="" src="https://gnosygnu.github.org/xowa/home/file/screenshot_wikipedia_wmf_600px.png" /></a>
   </div>
 </td>
 </tr>
@@ -100,102 +100,102 @@
 <h2><span class='mw-headline' id='Images'> Images </span></h2>
 <p>View images offline with <a href='image_dbs.html'>XOWA image databases</a>, or online by downloading them dynamically.
 <h5><a href="http://en.wikipedia.org/wiki/Solar_System#Visual_Summary">Solar System#Visual Summary</a></h5>
-<a href="http://xowa.org/wiki/home/file/screenshot_solar_system.png" >
-  <img src="http://xowa.org/wiki/home/file/screenshot_solar_system_600px.png" style='max-width:100%;' />
+<a href="http://xowa.org/home/file/screenshot_solar_system.png" >
+  <img src="https://gnosygnu.github.org/xowa/home/file/screenshot_solar_system_600px.png" style='max-width:100%;' />
 </a>
 <br/><br/><br/>
 
 <h2><span class='mw-headline' id='Math'> Math </span></h2>
 <p>Read Math formulas using MathJax or LaTeX</p>
 <h5><a href="http://en.wikipedia.org/wiki/Pythagorean_theorem">Pythagorean theorem</a></h5>
-<a href="http://xowa.org/wiki/home/file/screenshot_pythagorean_theorem.png" class="image">
-  <img src="http://xowa.org/wiki/home/file/screenshot_pythagorean_theorem_600px.png" />
+<a href="http://xowa.org/home/file/screenshot_pythagorean_theorem.png" class="image">
+  <img src="https://gnosygnu.github.org/xowa/home/file/screenshot_pythagorean_theorem_600px.png" />
 </a>
 <br/><br/><br/>
 
 <h2><span class='mw-headline' id='Popups'> Popups </span></h2>
 <p>Hover over links to read article popups</p>
 <h5>Preview the Sun article from the Earth page</h5>
-<a href="http://xowa.org/wiki/home/file/screenshot_earth_popup.png" class="image">
-  <img src="http://xowa.org/wiki/home/file/screenshot_earth_popup_600px.png" />
+<a href="http://xowa.org/home/file/screenshot_earth_popup.png" class="image">
+  <img src="https://gnosygnu.github.org/xowa/home/file/screenshot_earth_popup_600px.png" />
 </a>
 <br/><br/><br/>
 
 <h2><span class='mw-headline' id='Sister_wikis'> Sister wikis </span></h2>
 <p>Browse other sister wikis including Wiktionary, Wikisource, Wikivoyage, Wikiquote, Wikibooks, Wikiversity and Wikinews</p>
 <h5><a href="http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland/Chapter_1">Wikisource's Alice In Wonderland</a></h5>
-<a href="http://xowa.org/wiki/home/file/screenshot_alice_in_wonderland.png" class="image">
-  <img src="http://xowa.org/wiki/home/file/screenshot_alice_in_wonderland_600px.png" />
+<a href="http://xowa.org/home/file/screenshot_alice_in_wonderland.png" class="image">
+  <img src="https://gnosygnu.github.org/xowa/home/file/screenshot_alice_in_wonderland_600px.png" />
 </a>
 <br/><br/><br/>
 
 <h2><span class='mw-headline' id='Non-English_wikis'> Non-English wikis </span></h2>
 <p>Browse wikis in other langauges</p>
 <h5><a href="http://fr.wikipedia.org/wiki/France">French Wikipedia's France</a></h5>
-<a href="http://xowa.org/wiki/home/file/screenshot_france.png" class="image">
-  <img src="http://xowa.org/wiki/home/file/screenshot_france_600px.png" />
+<a href="http://xowa.org/home/file/screenshot_france.png" class="image">
+  <img src="https://gnosygnu.github.org/xowa/home/file/screenshot_france_600px.png" />
 </a>
 <br/><br/><br/>
 
 <h2><span class='mw-headline' id='Wikimedia_Commons'> Wikimedia Commons </span></h2>
 <p>Download original images from Wikimedia Commons</p>
 <h5><a href="http://commons.wikimedia.org/wiki/File:Mona_Lisa,_by_Leonardo_da_Vinci,_from_C2RMF_retouched.jpg">Wikimedia Commons's Mona Lisa</a></h5>
-<a href="http://xowa.org/wiki/home/file/screenshot_mona_lisa.png" class="image">
-  <img src="http://xowa.org/wiki/home/file/screenshot_mona_lisa_600px.png" />
+<a href="http://xowa.org/home/file/screenshot_mona_lisa.png" class="image">
+  <img src="https://gnosygnu.github.org/xowa/home/file/screenshot_mona_lisa_600px.png" />
 </a>
 <br/><br/><br/>
 
 <h2><span class='mw-headline' id='Wikidata'> Wikidata </span></h2>
 <p>Browse data from Wikidata</p>
 <h5><a href="http://www.wikidata.org/wiki/q2">Earth</a> (originally developed by <a href="https://de.wikipedia.org/wiki/Benutzer:Schnark">Schnark</a>)</h5>
-<a href="http://xowa.org/wiki/home/file/screenshot_wikidata.png" class="image">
-  <img src="http://xowa.org/wiki/home/file/screenshot_wikidata_600px.png" />
+<a href="http://xowa.org/home/file/screenshot_wikidata.png" class="image">
+  <img src="https://gnosygnu.github.org/xowa/home/file/screenshot_wikidata_600px.png" />
 </a>
 <br/><br/><br/>
 
 <h2><span class='mw-headline' id='Import'> Import </span></h2>
 <p>Import any one of over 800 other wikis using the <a href='http://dumps.wikimedia.org/backup-index.html'>Wikimedia dumps</a></p>
 <h5>home/wiki/Help:Import/List</h5>
-<a href="http://xowa.org/wiki/home/file/screenshot_import.png" class="image">
-  <img src="http://xowa.org/wiki/home/file/screenshot_import_600px.png" />
+<a href="http://xowa.org/home/file/screenshot_import.png" class="image">
+  <img src="https://gnosygnu.github.org/xowa/home/file/screenshot_import_600px.png" />
 </a>
 <br/><br/><br/>
 
 <h2><span class='mw-headline' id='Search_by_title'> Search by title </span></h2>
 <p>Search by title</p>
 <h5>Search for Astronomy</h5>
-<a href="http://xowa.org/wiki/home/file/screenshot_search_by_title.png" class="image">
-  <img src="http://xowa.org/wiki/home/file/screenshot_search_by_title_600px.png" />
+<a href="http://xowa.org/home/file/screenshot_search_by_title.png" class="image">
+  <img src="https://gnosygnu.github.org/xowa/home/file/screenshot_search_by_title_600px.png" />
 </a>
 <br/><br/><br/>
 
 <h2><span class='mw-headline' id='Alphabetic_list_of_titles'> Alphabetic list of titles </span></h2>
 <p>Retrieve alphetical list of titles</p>
 <h5><a href="en.wikipedia.org/wiki/Special:AllPages?from=Earth&namespace=0&hideredirects=0">Special:AllPages</a></h5>
-<a href="http://xowa.org/wiki/home/file/screenshot_allpages.png" class="image">
-  <img src="http://xowa.org/wiki/home/file/screenshot_allpages_600px.png" />
+<a href="http://xowa.org/home/file/screenshot_allpages.png" class="image">
+  <img src="https://gnosygnu.github.org/xowa/home/file/screenshot_allpages_600px.png" />
 </a>
 <br/><br/><br/>
 
 <h2><span class='mw-headline' id='Edit'> Edit </span></h2>
 <p>Edit articles to update content or remove mistakes</p>
 <h5><b>Editing</b> as shown within the Sandbox</h5>
-<a href="http://xowa.org/wiki/home/file/screenshot_sandbox.png" class="image">
-  <img src="http://xowa.org/wiki/home/file/screenshot_sandbox_600px.png" />
+<a href="http://xowa.org/home/file/screenshot_sandbox.png" class="image">
+  <img src="https://gnosygnu.github.org/xowa/home/file/screenshot_sandbox_600px.png" />
 </a>
 <br/><br/><br/>
 
 <h2><span class='mw-headline' id='HTTP_Server'> HTTP Server </span></h2>
 <p>Run XOWA as an HTTP Server (courtesy of <a href="https://github.com/Mattze96/XowaWebserver">Mattze96</a>)</p>
-<a href="http://xowa.org/wiki/home/file/screenshot_http_server.png" class="image">
-  <img src="http://xowa.org/wiki/home/file/screenshot_http_server_600px.png" />
+<a href="http://xowa.org/home/file/screenshot_http_server.png" class="image">
+  <img src="https://gnosygnu.github.org/xowa/home/file/screenshot_http_server_600px.png" />
 </a>
 <br/><br/><br/>
 
 <h2><span class='mw-headline' id='Firefox_Addon'> Firefox Addon </span></h2>
 <p>Run XOWA in Firefox through an Add-on (courtesy of <a href="https://github.com/piotrex/XOWA-Addon">piotrex</a>)</p>
-<a href="http://xowa.org/wiki/home/file/screenshot_firefox_addon.png" class="image">
-  <img src="http://xowa.org/wiki/home/file/screenshot_firefox_addon_600px.png" />
+<a href="http://xowa.org/home/file/screenshot_firefox_addon.png" class="image">
+  <img src="https://gnosygnu.github.org/xowa/home/file/screenshot_firefox_addon_600px.png" />
 </a>
 <br/><br/><br/>
 
