--- a/home/wiki/Help/Privacy/Android.html
+++ b/home/wiki/Help/Privacy/Android.html
@@ -59,7 +59,7 @@
       <span class="mw-headline" id="Overview">Overview</span>
     </h2>
     <p>
-      XOWA is commited to user privacy. Throughout the app, it pursues these four principles:
+      XOWA is commited to user privacy. Throughout the app, it follows these four guidelines:
     </p>
     <ul>
       <li>
@@ -132,7 +132,7 @@
       </li>
     </ul>
     <p>
-      XOWA collects no other data in the background. This includes application logging data. Logs will be added in a future release. When that happens, this section will then be updated to reflect new details on that function.
+      XOWA collects no other data in the background. This includes application logging data. However, logs will be added in a future release. When that happens, this section will then be updated to reflect new details on that function.
     </p>
     <h2>
       <span class="mw-headline" id="When_does_XOWA_share_this_information.3F">When does XOWA share this information?</span>
